// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`No age nor time 1`] = `
<span
  class="catalog-item-viewer s-rLDQDs7gMRnu"
>
  <article
    class="s-Z6y0dSYOFWU8"
    role="link"
    tabindex="0"
  >
    <img
      alt="Solitaire"
      class="s-Z6y0dSYOFWU8"
      src="http://localhost:3001/games/klondike/catalog/cover.webp"
    />
     
    <legend
      class="s-Z6y0dSYOFWU8"
    >
      <h3
        class="s-Z6y0dSYOFWU8"
      >
        Solitaire
      </h3>
       
      <div
        class="characteristics s-Z6y0dSYOFWU8"
      >
        <i
          class="material-icons s-Z6y0dSYOFWU8 hidden"
        >
          people
        </i>
        <span
          class="s-Z6y0dSYOFWU8 hidden"
        >
          undefined
        </span>
         
        <i
          class="material-icons s-Z6y0dSYOFWU8 hidden"
        >
          access_time
        </i>
        <span
          class="s-Z6y0dSYOFWU8 hidden"
        >
          undefined'
        </span>
         
        <i
          class="material-icons s-Z6y0dSYOFWU8 hidden"
        >
          person
        </i>
        <span
          class="s-Z6y0dSYOFWU8 hidden"
        >
          undefined+
        </span>
      </div>
       
      <details
        class="s-Z6y0dSYOFWU8 hidden"
      >
        <summary
          class="s-Z6y0dSYOFWU8"
        >
          <strong
            class="s-Z6y0dSYOFWU8"
          >
            Créé par : 
          </strong>
          undefined
        </summary>
         
        <p
          class="s-Z6y0dSYOFWU8"
        >
          <strong
            class="s-Z6y0dSYOFWU8"
          >
            Illustré par : 
          </strong>
          undefined
        </p>
         
        <p
          class="s-Z6y0dSYOFWU8"
        >
          <strong
            class="s-Z6y0dSYOFWU8"
          >
            Distribué par : 
          </strong>
          undefined
        </p>
      </details>
    </legend>
  </article>
  <!--&lt;CatalogItem&gt;-->
</span>
`;

exports[`With characteristics 1`] = `
<span
  class="catalog-item-viewer s-rLDQDs7gMRnu"
>
  <article
    class="s-Z6y0dSYOFWU8"
    role="link"
    tabindex="0"
  >
    <img
      alt="Solitaire"
      class="s-Z6y0dSYOFWU8"
      src="http://localhost:3001/games/klondike/catalog/cover.webp"
    />
     
    <legend
      class="s-Z6y0dSYOFWU8"
    >
      <h3
        class="s-Z6y0dSYOFWU8"
      >
        Solitaire
      </h3>
       
      <div
        class="characteristics s-Z6y0dSYOFWU8"
      >
        <i
          class="material-icons s-Z6y0dSYOFWU8"
        >
          people
        </i>
        <span
          class="s-Z6y0dSYOFWU8"
        >
          2
        </span>
         
        <i
          class="material-icons s-Z6y0dSYOFWU8"
        >
          access_time
        </i>
        <span
          class="s-Z6y0dSYOFWU8"
        >
          30'
        </span>
         
        <i
          class="material-icons s-Z6y0dSYOFWU8"
        >
          person
        </i>
        <span
          class="s-Z6y0dSYOFWU8"
        >
          10+
        </span>
      </div>
       
      <details
        class="s-Z6y0dSYOFWU8 hidden"
      >
        <summary
          class="s-Z6y0dSYOFWU8"
        >
          <strong
            class="s-Z6y0dSYOFWU8"
          >
            Créé par : 
          </strong>
          undefined
        </summary>
         
        <p
          class="s-Z6y0dSYOFWU8"
        >
          <strong
            class="s-Z6y0dSYOFWU8"
          >
            Illustré par : 
          </strong>
          undefined
        </p>
         
        <p
          class="s-Z6y0dSYOFWU8"
        >
          <strong
            class="s-Z6y0dSYOFWU8"
          >
            Distribué par : 
          </strong>
          undefined
        </p>
      </details>
    </legend>
  </article>
  <!--&lt;CatalogItem&gt;-->
</span>
`;

exports[`With characteristics and copyright 1`] = `
<span
  class="catalog-item-viewer s-rLDQDs7gMRnu"
>
  <article
    class="s-Z6y0dSYOFWU8"
    role="link"
    tabindex="0"
  >
    <img
      alt="Solitaire"
      class="s-Z6y0dSYOFWU8"
      src="http://localhost:3001/games/klondike/catalog/cover.webp"
    />
     
    <legend
      class="s-Z6y0dSYOFWU8"
    >
      <h3
        class="s-Z6y0dSYOFWU8"
      >
        Solitaire
      </h3>
       
      <div
        class="characteristics s-Z6y0dSYOFWU8"
      >
        <i
          class="material-icons s-Z6y0dSYOFWU8"
        >
          people
        </i>
        <span
          class="s-Z6y0dSYOFWU8"
        >
          2-4
        </span>
         
        <i
          class="material-icons s-Z6y0dSYOFWU8"
        >
          access_time
        </i>
        <span
          class="s-Z6y0dSYOFWU8"
        >
          30'
        </span>
         
        <i
          class="material-icons s-Z6y0dSYOFWU8"
        >
          person
        </i>
        <span
          class="s-Z6y0dSYOFWU8"
        >
          10+
        </span>
      </div>
       
      <details
        class="s-Z6y0dSYOFWU8"
      >
        <summary
          class="s-Z6y0dSYOFWU8"
        >
          <strong
            class="s-Z6y0dSYOFWU8"
          >
            Créé par : 
          </strong>
          John Doe, Jane Lark
        </summary>
         
        <p
          class="s-Z6y0dSYOFWU8"
        >
          <strong
            class="s-Z6y0dSYOFWU8"
          >
            Illustré par : 
          </strong>
          Amy Banks, Mark Loom
        </p>
         
        <p
          class="s-Z6y0dSYOFWU8"
        >
          <strong
            class="s-Z6y0dSYOFWU8"
          >
            Distribué par : 
          </strong>
          Awesome games, Games from elsewhere
        </p>
      </details>
    </legend>
  </article>
  <!--&lt;CatalogItem&gt;-->
</span>
`;
